# cybersecurity-ai-agent

./: CLAUDE.md  Makefile  README.md  download_wordlist.sh  pyproject.toml
notebooks/: attack_agent.ipynb  cybersecurity_agent.ipynb  scan_agent.ipynb  target-scan-react-agent.ipynb
src/agent_core/edge/: __init__.py  tool_router.py
src/agent_core/graph/: __init__.py  graph.py
src/agent_core/node/: __init__.py  process_tool_results_node.py  react_node.py
src/agent_core/state/: __init__.py  severity.py  state.py  target.py  tools.py
src/agent_core/tool/: __init__.py
src/agent_core/tool/curl/: __init__.py  curl_tool.py  models.py
src/agent_core/tool/ffuf/: __init__.py  ffuf.py  models.py
src/agent_core/tool/process/: __init__.py  process.py
src/api_target/: main.py
src/attack_agent/: __init__.py  graph.py
src/attack_agent/node/: __init__.py  attack_node.py  attack_summary_node.py
src/attack_agent/state/: __init__.py  attack_agent_state.py
src/cybersecurity_agent/: __init__.py  graph.py
src/cybersecurity_agent/node/: __init__.py  attack_agent_node.py  cybersecurity_summary_node.py  scan_agent_node.py
src/cybersecurity_agent/state/: __init__.py  cybersecurity_agent_state.py
src/scan_agent/: graph.py
src/scan_agent/node/: __init__.py  scan_node.py  summary_node.py
src/scan_agent/state/: __init__.py  scan_agent_state.py
src/target_scan_agent/: graph.py
src/target_scan_agent/edge/: __init__.py  tool_router.py
src/target_scan_agent/node/: __init__.py  assistant.py  attack_target.py  generate_report.py  process_tool_results.py  scan_target.py  target_node.py
src/target_scan_agent/report/: __init__.py  markdown.py
src/target_scan_agent/state/: __init__.py  state.py  tools.py
src/target_scan_agent/tools/: __init__.py
src/target_scan_agent/tools/common/: process_utils.py
src/target_scan_agent/tools/enumeration/: ffuf.py  models.py
src/target_scan_agent/tools/http/: __init__.py  curl_tool.py  flexible_http_tool.py  models.py
src/target_scan_agent/tools/port_scan/: models.py  nmap_tool.py
tests/: conftest.py
tests/target_scan_agent/: conftest.py  test_assistant.py
tests/target_scan_agent/edge/: __init__.py  test_tool_router.py
tests/target_scan_agent/state/: test_state_models.py
wordlists/: big.txt  common.txt  medium.txt  small.txt
(+10 files in other folders)
