[project]
name = "cybersecurity-ai-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Vitalii Honchar",email = "weaxme@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langgraph (>=0.4.8,<0.5.0)",
    "tavily-python (>=0.7.5,<0.8.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
langchain = "^0.3.25"
langchain-openai = "^0.3.21"
asyncio = "^3.4.3"
aiohttp = "^3.12.11"
pytest = "^8.4.0"
black = "^25.1.0"
isort = "^6.0.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
